theme(fix): proper z-index for status badge

--- a/assets/scss/components/_articles.scss
+++ b/assets/scss/components/_articles.scss
@@ -71,7 +71,7 @@ article {
     top: 0;
     left: 0;
 
-    z-index: 99999;
+    z-index: 1010;
 
     border-top-left-radius: $border-radius;
     border-bottom-right-radius: $border-radius;
